# MissPoeAccounting

./: .gitignore  README.md  app.py  app.spec  build_app.sh  build_resources.cmd  build_ui.cmd  constants.py  excel_functions.py  pyproject.toml  requirements.txt  utils.py
app/: app.py  constants.py  excel_functions.py
core/: app.py  constants.py  excel_functions.py  gui-app.py  utils.py
resources/: pembelian_ui.py  pembelian_ui_ss.py
tests/: test_transfer_records.py
ui/: Poe_Excel_automator.ui  Poe_Excel_automator_ss.ui
