[tool.black]
line-length=120
[tool.poetry]
name = "misspoeaccounting"
version = "0.1.0"
description = ""
authors = ["Hugo <hugosetyadji@unifi3d.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
openpyxl = "^3.0.10"
PySide6 = "^6.4.1"
pyinstaller = "^5.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
