[tool.black]
line-length=120

[tool.poetry]
name = "poe-automator"
version = "0.1.0"
description = ""
authors = ["Hugo Setyadji <setyadjih@gmail.com>"]
readme = "README.md"
packages = [{include = "poe_automator"}]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
openpyxl = "^3.0.10"
pyinstaller = "^5.6.2"
PySide6 = "^6.4.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
